--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-plugin-md": "^1.0.19",
+    "eslint-plugin-prettier": "^3.1.4"
   }
 }
