--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
@@ -32,7 +35,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.7.0",
     "eslint-plugin-md": "^1.0.19",
     "eslint-plugin-prettier": "^3.1.4"
   }
